force-app/main/default/objects/Skills__c/Skills__c.object-meta.xml
<CustomObject>
    <description>Contact skills to be selected from a predefined picklist.</description>
    <label>Skills</label>
    <nameField>
        <displayFormat>S-{000}</displayFormat>
        <label>Skill Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>