force-app/main/default/objects/Skills__c/fields/Expert_Image__c.field-meta.xml
<CustomField>
    <fullName>Expert_Image__c</fullName>
    <formula>CASE( Skill_Level__c, 
&quot;Expert&quot;,
IMAGE(&quot;/img/samples/stars_500.gif&quot;, &quot;Expert Image&quot;),
&quot;High&quot;,&quot;Almost There!&quot;,
&quot;Medium&quot;,&quot;In Progress&quot;,
&quot;N/A&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Expert</label>
    <type>Text</type>
</CustomField>