force-app/main/default/objects/Skills__c/fields/IsCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentUser__c</fullName>
    <description>This field is used in the &quot;My&quot; list view</description>
    <formula>Contact__r.User_ID__c =  $User.Id</formula>
    <label>IsCurrentUser</label>
    <type>Checkbox</type>
</CustomField>