force-app/main/default/objects/Skills__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <description>Salesforce Related Skill</description>
    <inlineHelpText>Please select a skill.</inlineHelpText>
    <label>Skill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Automated Testing</fullName>
            </value>
            <value>
                <fullName>Case Managment</fullName>
            </value>
            <value>
                <fullName>Code Control/Dev Process</fullName>
            </value>
            <value>
                <fullName>Communities</fullName>
            </value>
            <value>
                <fullName>Content Management/Knowledge/Files</fullName>
            </value>
            <value>
                <fullName>Continuous Integration</fullName>
            </value>
            <value>
                <fullName>Copado</fullName>
            </value>
            <value>
                <fullName>Data Migrations/ETL</fullName>
            </value>
            <value>
                <fullName>Data Model Design</fullName>
            </value>
            <value>
                <fullName>Dynamic Document Generation Tools</fullName>
            </value>
            <value>
                <fullName>Einstein Products/Machine Learning</fullName>
            </value>
            <value>
                <fullName>Email Marketing</fullName>
            </value>
            <value>
                <fullName>Heroku</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>Lead/Opportunity Management</fullName>
            </value>
            <value>
                <fullName>Lightning Component Development</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Permissions and Sharing</fullName>
            </value>
            <value>
                <fullName>Process Builder</fullName>
            </value>
            <value>
                <fullName>Reporting and Analytics</fullName>
            </value>
            <value>
                <fullName>Requirements Discovery &amp; Capture</fullName>
            </value>
            <value>
                <fullName>Scrum Master</fullName>
            </value>
            <value>
                <fullName>SSO/Authentication</fullName>
            </value>
            <value>
                <fullName>Technical Writing</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>UI Design</fullName>
            </value>
            <value>
                <fullName>UX</fullName>
            </value>
            <value>
                <fullName>Visual Flow Designer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>