force-app/main/default/objects/Skills__c/fields/Skill_Level__c.field-meta.xml
<CustomField>
    <fullName>Skill_Level__c</fullName>
    <description>Skill level</description>
    <inlineHelpText>Select current skill level: Low - Little to no experience. Medium - Some experience, but needs further development. High - Full working understanding of subject. Expert - Could competently educate others about the subject.</inlineHelpText>
    <label>Skill Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expert</fullName>
                <color>#FF9900</color>
                <label>Expert</label>
            </value>
            <value>
                <fullName>High</fullName>
                <default>true</default>
                <label>High</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>