force-app/main/default/objects/Skills__c/listViews/All_Skills.listView-meta.xml
<ListView>
    <fullName>All_Skills</fullName>
    <columns>NAME</columns>
    <columns>Skill__c</columns>
    <columns>Skill_Level__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Skills</label>
</ListView>