force-app/main/default/objects/Skills__c/listViews/Experts.listView-meta.xml
<ListView>
    <fullName>Experts</fullName>
    <columns>NAME</columns>
    <columns>Skill__c</columns>
    <columns>Skill_Level__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Skill_Level__c</field>
        <operation>contains</operation>
        <value>Expert,High</value>
    </filters>
    <label>All Experts</label>
</ListView>