force-app/main/default/objects/Skills__c/listViews/MySkills.listView-meta.xml
<ListView>
    <fullName>MySkills</fullName>
    <columns>NAME</columns>
    <columns>Skill__c</columns>
    <columns>Skill_Level__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsCurrentUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Skills</label>
</ListView>