force-app/main/default/objects/Skills__c/listViews/Testing.listView-meta.xml
<ListView>
    <fullName>Testing</fullName>
    <columns>Contact__c</columns>
    <columns>Skill__c</columns>
    <columns>Skill_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Skill__c</field>
        <operation>equals</operation>
        <value>Code Control/Dev Process,Continuous Integration,Copado,Scrum Master</value>
    </filters>
    <label>Testing</label>
</ListView>